# nextgis_datastore

./: .gitignore  .travis.yml  CMakeLists.txt  Codingstyle.md  Ideas.md  LICENSE  Readme.md
bindings/: CMakeLists.txt  api.i  callback_java.i  callback_typemap_java.i  directory_container_java.i  directory_container_typemap_java.i  extend_java.i  typemap_java.i  typemap_string_array.i
bindings/java/: DirectoryContainer.java  DirectoryEntry.java
ci/travis/android/: install.sh  script.sh
ci/travis/android_cmake/: install.sh  script.sh
ci/travis/linux_clang/: install.sh
ci/travis/linux_gcc/: install.sh  script.sh
ci/travis/osx/: install.sh  script.sh
cmake/: ExternalProject.cmake  FindAnyProject.cmake  FindExtGDAL.cmake  FindExtGTest.cmake  FindExtProject.cmake  FindGEOS.cmake  FindGLES2.cmake  Info.plist.in  android.cmake  extlib.cmake  ios.cmake  ios.toolchain.cmake  test_dependency.cmake  test_dependency_win.cmake  uninstall.cmake.in  util-local.cmake  util.cmake
include/: CMakeLists.txt
include/ngstore/: api.h  codes.h  common.h  version.h
include/ngstore/catalog/: filter.h
include/ngstore/util/: constants.h
opt/: sym.exp
opt/android/: build.gradle
opt/ios/: build_framework.py
opt/ios/ngstore.xcodeproj/: project.pbxproj
opt/ios/ngstore.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
opt/ios/ngstore.xcodeproj/xcshareddata/xcschemes/: ngstore.framework.xcscheme
src/: CMakeLists.txt  api.cpp  api.h  api_jni.cpp  api_priv.h  common.h  constants.h  dataset.cpp  dataset.h  datastore.cpp  datastore.h  glview.cpp  glview.h  map.cpp  map.h  mapstore.cpp  mapstore.h  maptransform.cpp  maptransform.h  mapview.cpp  mapview.h  matrix.cpp  matrix.h  rasterdataset.h  table.cpp  table.h  version.h
src/catalog/: CMakeLists.txt  archive.cpp  archive.h  catalog.cpp  catalog.h  catalogobjectcontainer.h  file.cpp  file.h  filter.cpp  folder.cpp  folder.h  localconnections.cpp  localconnections.h  mapfile.cpp  mapfile.h  ngw.cpp  ngw.h  ngw_api.cpp  object.cpp  object.h  objectcontainer.cpp  objectcontainer.h  remoteconnections.cpp  remoteconnections.h
src/catalog/factories/: connectionfactory.cpp  connectionfactory.h  datastorefactory.cpp  datastorefactory.h  filefactory.cpp  filefactory.h  folderfactory.cpp  folderfactory.h  objectfactory.cpp  objectfactory.h  rasterfactory.cpp  rasterfactory.h  simpledatasetfactory.cpp  simpledatasetfactory.h
src/ds/: CMakeLists.txt  README.earcut  coordinatetransformation.cpp  coordinatetransformation.h  dataset.cpp  dataset.h  datasetcontainer.cpp  datasetcontainer.h  datastore.cpp  datastore.h  earcut.hpp  featureclass.cpp  featureclass.h  featureclassovr.cpp  featureclassovr.h  featuredataset.cpp  featuredataset.h  geometry.cpp  geometry.h  mapinfodatastore.cpp  mapinfodatastore.h  memstore.cpp  memstore.h  ngw.cpp  ngw.h  raster.cpp  raster.h  rasterdataset.cpp  rasterdataset.h  simpledataset.cpp  simpledataset.h  spatialdataset.cpp  spatialdataset.h  store.cpp  store.h  storefeatureclass.cpp  storefeatureclass.h  storefeaturedataset.cpp  storefeaturedataset.h  table.cpp  (+3 more)
src/map/: CMakeLists.txt  gldisplay.cpp  gldisplay.h  glfillers.cpp  glview.cpp  glview.h  layer.cpp  layer.h  map.cpp  map.h  mapstore.cpp  mapstore.h  maptransform.cpp  maptransform.h  mapview.cpp  mapview.h  matrix.cpp  matrix.h  overlay.cpp  overlay.h  renderlayer.cpp  renderlayer.h  style.cpp  style.h  vector.h
src/map/gl/: buffer.cpp  buffer.h  functions.cpp  functions.h  glfillers.cpp  glfillers.h  glfunctions.cpp  glfunctions.h  glprogram.cpp  glprogram.h  glview.cpp  glview.h  image.cpp  image.h  layer.cpp  layer.h  overlay.cpp  overlay.h  program.cpp  program.h  style.cpp  style.h  tile.cpp  tile.h  view.cpp  view.h
src/platform/android/: NgsCoreAndroid.cpp  NgsCoreAndroid.h
src/util/: CMakeLists.txt  account.cpp  account.h  authstore.cpp  authstore.h  buffer.cpp  buffer.h  catalogobjectcontainer.cpp  catalogobjectcontainer.h  constants.h  directorycontainer.cpp  directorycontainer.h  error.cpp  error.h  fileutil.cpp  fileutil.h  geometryutil.cpp  geometryutil.h  global.h  jsondocument.cpp  jsondocument.h  maputil.cpp  maputil.h  mutex.cpp  mutex.h  notify.cpp  notify.h  options.cpp  options.h  progress.cpp  progress.h  settings.cpp  settings.h  stringutil.cpp  stringutil.h  threadpool.cpp  threadpool.h  url.cpp  url.h  versionutil.cpp  (+1 more)
test/: CMakeLists.txt  gl_test.cpp  main_test.cpp  map_test.cpp  matrix_test.cpp  ngw_test.cpp  settings_test.cpp  store_test.cpp  test.cpp  test.h
test/data/: bld.dbf  bld.shp  bld.shx
